2012-02-06  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents_simple/incidents.php: Added filter
	by status in the list of incidents into the simple view

2012-02-06  Sergio Martin <sergio.martin@artica.es>

	* include/functions_incidents.php
	include/functions_db.php
	include/languages/index.pot
	operation/incidents_simple
	operation/incidents_simple/incident.php
	operation/incidents_simple/incident.files.php
	operation/incidents_simple/incidents.php
	operation/incidents_simple/incident.details.php
	operation/incidents_simple/incident.workunits.php
	operation/incidents_simple/incident_new.php
	operation/main_menu.php
	operation/side_menu.php
	operation/contracts/contract_detail.php: Added simple mode
	into incidents with a really simple screen to see list of the
	own incidents, create a ticket, attach a file or add a workunit 
	to a incident 

2012-02-02 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents/incident.php,
	operation/incidents/incident_report.php,
	operation/side_menu.php: Incident report moved from side menu to 
	an incident tab

2012-02-02  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php
	operation/contracts/contract_detail.php: Added company
	control in the contract list

2012-02-02 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/incidents/incident_tracking.php: Added incident details to
	tracking report

2012-02-02 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_graph.php: Added support to get sla slice graph
	using AJAX.
	* include/graphs/functions_fsgraph.php: created new functions for
	tracking report
	* include/integria_cron.php: Added function to calculate data of sla
	tracking
	* include/functions_db.php: Fixed some issues related to incident
	tracking.
	* operation/incidents/incident_detail.php: Fixed some issues realted to
	incident tracking.
	* operation/incidents/incident_tracking.php
	* integria_db.sql, upgrade_to_3.0.sql: Added table tincident_sla_graph
