@@ -1,3 +1,10 @@
+2012-02-07  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_incidents.php
+	operation/incidents_simple/incident.php: Added uptime updation
+	when add a workunit and add a refresh button in the incident
+	view
+
 2012-02-06  Sergio Martin <sergio.martin@artica.es>
 
 	* operation/incidents_simple/incidents.php: Added filter
